<?xml version="1.0" encoding="utf-8"?>
<resources>
		<string name="app_name">DPLI Collections</string>
	<string name="str_menu_item_help">About</string>
	<string name="str_menu_item_logout">Logout</string>
	<string name="str_menu_item_logout_LogoutinprogressPleasewait">Logout in progress. Please wait...</string>
	<string name="str_scr_login">Login to DPLI</string>
	<string name="str_btn_login">Login</string>
	<string name="str_menu_ezetap_item_help">About</string>
	<string name="str_scr_fetch_policy">Fetch Policy</string>
	<string name="str_lbl_fetch_policy_main_title">Renewals</string>
	<string name="str_btn_fetch_policy_Fetchingpolicydetails">Fetching policy details...</string>
	<string name="str_btn_fetch_policy">Search</string>
	<string name="str_mitem_ezetap_pmt_history">Transaction History</string>
	<string name="str_mitem_ezetap_init_device">Prepare Device</string>
	<string name="str_mitem_ezetap_help">About</string>
	<string name="str_mitem_ezetap_logout">Logout</string>
	<string name="str_scr_review_policy">Review Policy</string>
	<string name="str_lbl_review_policy_main_title">Policy Details</string>
	<string name="str_lbl_review_policy_policy_no_lbl">Policy Number</string>
	<string name="str_lbl_review_policy_amount_lbl">Amount Payable</string>
	<string name="str_lbl_review_policy_2a">Plan Name:</string>
	<string name="str_lbl_review_policy_3a">Owner Name:</string>
	<string name="str_lbl_review_policy_4a">Premium Due Date:</string>
	<string name="str_lbl_review_policy_5a">Premium Amount:</string>
	<string name="str_lbl_review_policy_6a">Service Tax:</string>
	<string name="str_lbl_review_policy_7a">Total Premium:</string>
	<string name="str_lbl_review_policy_8a">Interest Amount:</string>
	<string name="str_lbl_review_policy_9a">Clear Amount:</string>
	<string name="str_lbl_review_policy_11a">Policy Status:</string>
	<string name="str_lbl_review_policy_12a">Payment Frequency:</string>
	<string name="str_btn_review_policy_proceed">Proceed</string>
	<string name="str_scr_payment_options">Payment Options</string>
	<string name="str_lbl_payment_options_main_title">Process Payment</string>
	<string name="str_lbl_payment_options_amount_label">Amount Due:</string>
	<string name="str_btn_cash_pymt">Cash</string>
	<string name="str_btn_card_pymt">Card</string>
	<string name="str_btn_cheque_pymt">Cheque</string>
	<string name="str_btn_dd_pymt">Demand Draft</string>
	<string name="str_scr_cheque_details">Cheque Details</string>
	<string name="str_btn_cheque_details_bank_name">Select</string>
	<string name="str_btn_cheque_details_next">Next</string>
	<string name="str_lst_bank_row">No List</string>
	<string name="str_lst_item_bank_row">No Row</string>
	<string name="str_scr_bank_selection">Bank Selection</string>
	<string name="str_lbl_bank_selection_title">Select Bank</string>
	<string name="str_lst_bank_selection_bank_name">Bank List</string>
	<string name="str_row_bank">Bank Row</string>
	<string name="str_scr_send_receipt">Send Receipt</string>
	<string name="str_lbl_send_receipt">Send Receipt</string>
	<string name="str_btn_skip_receipt">Skip</string>
	<string name="str_btn_send_receipt">Send</string>
	<string name="str_scr_ezetap_about_screen">About</string>
	<string name="str_lbl_ezetap_about_app_name_label">Application :</string>
	<string name="str_lbl_ezetap_about_app_version_label">Version     :</string>
	<string name="str_lbl_ezetap_about_genmode_label">App Mode    :</string>
	<string name="str_lbl_ezetap_about_contact_us_label_1">Contact Us at:</string>
	<string name="str_lbl_ezetap_about_imei">IMEI:</string>
	<string name="str_scr_txn_history">Transaction History</string>
	<string name="str_lbl_txn_history_title">Transaction History</string>
	<string name="str_lbl_txn_history_total_count_label">Transactions</string>
	<string name="str_lbl_txn_history_netamount_label">Amount</string>
	<string name="str_txn_history_list">Transaction History List</string>
	<string name="str_row_txn_history">Txn History Row</string>
	<string name="str_lilbl_txn_id_str">Txn Id :</string>
	<string name="str_lbl_txn_summary_cashback">Cash Out:</string>
	<string name="str_lilbl_shipment_id_str_1">:</string>
	<string name="str_lilbl_shipment_id_str_old">Order #:</string>
	<string name="str_lbl_txn_history_payment_type_label">Payment by:</string>
	<string name="str_lilbl_txn_history_card_prefix">*</string>
	<string name="str_lilbl_txn_history_emi_label">EMI term:</string>
	<string name="str_scr_txn_detail">Transaction Detail</string>
	<string name="str_lbl_txn_detail_txn_id_label">Txn Id:</string>
	<string name="str_lbl_txn_detail_shipment_id_label_1">:</string>
	<string name="str_lbl_txn_detail_shipment_id_label_old">Order #:</string>
	<string name="str_lbl_txn_detail_customer_name_label">Customer Name:</string>
	<string name="str_lbl_txn_detail_merchant_name_label">Merchant:</string>
	<string name="str_lbl_txn_detail_payment_type_label">Payment by:</string>
	<string name="str_lbl_txn_detail_card_prefix">*</string>
	<string name="str_lbl_txn_detail_amount_label">Amount:</string>
	<string name="str_lbl_txn_detail_amount_cashback_label">Cash Out:</string>
	<string name="str_lbl_txn_detail_emi_label">EMI term:</string>
	<string name="str_lbl_txn_detail_emi_interest_label">EMI Interest rate %:</string>
	<string name="str_lbl_txn_detail_emi_cashback_label">EMI Cashback %:</string>
	<string name="str_lbl_txn_detail_mobile_number_label">Mobile#:</string>
	<string name="str_lbl_txn_detail_creation_time_label">On:</string>
	<string name="str_lbl_txn_detail_authcode_label">Auth Code:</string>
	<string name="str_lbl_txn_detail_terminal_id_label">TID:</string>
	<string name="str_lbl_txn_detail_merchant_id_label">MID:</string>
	<string name="str_lbl_txn_detail_invoice_number_label">Invoice number:</string>
	<string name="str_lbl_txn_detail_rrn_label">RRN:</string>
	<string name="str_lbl_txn_detail_status_label">Status:</string>
	<string name="str_lbl_txn_detail_type_desc_label">Txn Type:</string>
	<string name="str_lbl_txn_detail_cheque_number_label">Cheque #:</string>
	<string name="str_lbl_txn_detail_bank_code_label">Bank Code:</string>
	<string name="str_lbl_txn_detail_bank_name_label">Bank Name:</string>
	<string name="str_lbl_txn_detail_customer_receipt_url_label">Receipt URL:</string>
	<string name="str_lbl_txn_detail_email_label">Email Address:</string>
	<string name="str_btn_todo_detail_void">Void</string>
	<string name="str_btn_txn_detail_send_receipt">Receipt</string>
	<string name="str_btn_todo_detail_attach_sign">Sign</string>
	<string name="str_scr_txn_summary_screen">Summary</string>
	<string name="str_txn_summary_list">Summary List</string>
	<string name="str_row_txn_summary">Txn Summary Row</string>
	<string name="str_btn_txn_summary_back">Back</string>
	<string name="str_scr_resend_receipt">ReSend Receipt</string>
	<string name="str_lbl_resend_receipt_label3">Send Receipt To</string>
	<string name="str_btn_resend_receipt">Send</string>
	<string name="btn_yes">Yes</string>
	<string name="btn_no">No</string>
	<string name="btn_later">Later</string>
	<string name="btn_now">Now</string>
	<string name="selected_date">Is selected date</string>
	<string name="str_downloading">Downloading</string>
	<string name="str_downloading_app">Downloading application.\nPlease wait...</string>
	<string name="str_cancel">Cancel</string>
	<string name="str_install_service_app">Install Ezetap Service Application</string>
	<string name="msg_install_service_app">This application requires Ezetap Service Application.\nWould you like to install it?</string>
	<string name="msg_service_app_not_installed">You have chosen not to install the Ezetap Service Application</string>
	<string name="msg_no_results">No Results</string>
	<string name="msg_invalid_data">Invalid Data</string>
	<string name="network_not_connected">You are not connected to the network. \nPlease try operation when you are connected</string>
	<string name="str_prepare_device">Prepare Device</string>
	<string name="str_please_prepare_device">Please prepare the device before you start to accept payments</string>
	<string name="str_incorrect_no">Incorrect mobile number</string>
	<string name="new_pwd_mismatch">New passwords do not match</string>
	<string name="str_update_canceled">Update canceled</string>
	<string name="str_language_already_set">Language is already set</string>
	<string name="new_sdk_available">A new version of Ezetap SDK is available</string>
	<string name="new_app_available">A new version of your application is available - </string>
	<string name="update_dwnlded">Update downloaded successfully</string>
	<string name="incorrect_amount">Incorrect Payment Amount</string>
	<string name="invalid_text">is not a valid text</string>
	<string name="parse_error">Unable to parse data</string>
	<string name="incorrect_cheque_date">Invalid Cheque / DD Date</string>
	<string name="blank_cheque_date">Please select Cheque / DD Date</string>
	<string name="incorrect_cheque_number">Invalid Cheque / DD Number</string>
	<string name="blank_cheque_number">Cheque / DD Number cannot be left blank</string>
	<string name="incorrect_bank_code">Invalid Bank Code</string>
	<string name="msg_invalid_email">Invalid Email Address</string>
	<string name="msg_enter_mob_email">Enter Mobile No or Email Address</string>
	<string name="incorrect_bank_name">Bank name accepts only alphabets</string>
	<string name="blank_bank_name">Please select Bank name</string>
	<string name="msg_exit_application">Are you sure you wish to exit the application?</string>
	<string name="msg_cash_transaction_success">Cash transaction completed successfully</string>
	<string name="msg_card_transaction_success">Card transaction completed successfully</string>
</resources>