<?xml version="1.0" encoding="UTF-8" standalone="no"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/background_blue" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><RelativeLayout android:background="@android:color/white" android:id="@+id/grp_ezetap_logo_header" android:layout_alignParentTop="true" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal" android:paddingBottom="5dp" android:paddingTop="5dp"><ImageView android:adjustViewBounds="true" android:background="@drawable/white_header_logo" android:id="@+id/image_header_logo" android:layout_centerHorizontal="true" android:layout_gravity="center_horizontal" android:layout_height="40sp" android:layout_width="200sp" android:scaleType="centerCrop"/></RelativeLayout><ScrollView android:id="@+id/grp_ezetap_main_scroll" android:layout_above="@+id/grp_ezetap_logo_footer" android:layout_below="@+id/grp_ezetap_logo_header" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical" android:paddingLeft="20dp" android:paddingRight="20dp"><LinearLayout android:id="@+id/grp_payment_options" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><com.ezetap.utils.MyTextView android:id="@+id/lbl_payment_options_main_title" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:text="@string/str_lbl_payment_options_main_title" android:textColor="@android:color/white" android:textSize="30sp" android:textStyle="bold"/><LinearLayout android:id="@+id/grp_payment_options_amount" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal" android:padding="0dp"><com.ezetap.utils.MyTextView android:id="@+id/lbl_payment_options_amount_label" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_marginLeft="10sp" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:text="@string/str_lbl_payment_options_amount_label" android:textColor="#0000FF" android:textSize="20sp" android:textStyle="bold"/><com.ezetap.utils.MyTextView android:id="@+id/lbl_payment_options_currency_code" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_marginLeft="15sp" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textColor="#FFD12A" android:textSize="30sp" android:textStyle="bold"/><com.ezetap.utils.MyTextView android:id="@+id/lbl_payment_options_amount" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_marginLeft="10sp" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textColor="#CC0000" android:textSize="40sp" android:textStyle="bold"/></LinearLayout><LinearLayout android:id="@+id/grp_payment_options_buttons" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><com.ezetap.utils.MyButton android:background="@drawable/button_blue" android:id="@+id/btn_cash_pymt" android:layout_alignParentRight="true" android:layout_height="wrap_content" android:layout_marginTop="15sp" android:layout_width="fill_parent" android:onClick="btn_cash_pymtClicked" android:text="@string/str_btn_cash_pymt" android:textColor="@android:color/darker_gray" android:textSize="25sp" android:textStyle="bold"/><com.ezetap.utils.MyButton android:background="@drawable/button_blue" android:id="@+id/btn_card_pymt" android:layout_alignParentRight="true" android:layout_height="wrap_content" android:layout_marginTop="15sp" android:layout_width="fill_parent" android:onClick="btn_card_pymtClicked" android:text="@string/str_btn_card_pymt" android:textColor="@android:color/darker_gray" android:textSize="25sp" android:textStyle="bold"/><com.ezetap.utils.MyButton android:background="@drawable/button_blue" android:id="@+id/btn_cheque_pymt" android:layout_alignParentRight="true" android:layout_height="wrap_content" android:layout_marginTop="15sp" android:layout_width="fill_parent" android:onClick="btn_cheque_pymtClicked" android:text="@string/str_btn_cheque_pymt" android:textColor="@android:color/darker_gray" android:textSize="25sp" android:textStyle="bold"/><com.ezetap.utils.MyButton android:background="@drawable/button_blue" android:id="@+id/btn_dd_pymt" android:layout_alignParentRight="true" android:layout_height="wrap_content" android:layout_marginTop="15sp" android:layout_width="fill_parent" android:onClick="btn_dd_pymtClicked" android:text="@string/str_btn_dd_pymt" android:textColor="@android:color/darker_gray" android:textSize="25sp" android:textStyle="bold"/></LinearLayout></LinearLayout></ScrollView><RelativeLayout android:id="@+id/grp_ezetap_logo_footer" android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_version" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textSize="15sp"/><ImageView android:adjustViewBounds="true" android:background="@drawable/logo_watermark" android:id="@+id/image_footer_logo" android:layout_alignParentRight="true" android:layout_gravity="center_horizontal" android:layout_height="20sp" android:layout_width="60sp" android:scaleType="centerCrop"/></RelativeLayout></RelativeLayout>