<?xml version="1.0" encoding="UTF-8" standalone="no"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/list_selector" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><LinearLayout android:background="@android:color/transparent" android:id="@+id/grp_txn_history_list_item" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><LinearLayout android:background="@android:color/transparent" android:id="@+id/grp_txn_history_txn_id" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_id_str" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:text="@string/str_lilbl_txn_id_str" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_id" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/></LinearLayout><LinearLayout android:background="@android:color/transparent" android:id="@+id/grp_txn_history_list_item" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_txn_price_currency_code" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_amount" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_status" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp" android:textStyle="bold"/></LinearLayout><LinearLayout android:background="@android:color/transparent" android:id="@+id/grp_txn_history_list_item_cashback" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_txn_summary_cashback" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:text="@string/str_lbl_txn_summary_cashback" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lbl_txn_price_currency_code_cashback" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_amountCashback" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/></LinearLayout><LinearLayout android:background="@android:color/transparent" android:id="@+id/grp_txn_history_shipment" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lilbl_shipment_id_str" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_shipment_id_str_1" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_width="wrap_content" android:text="@string/str_lilbl_shipment_id_str_1" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_shipment_id_str_old" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:text="@string/str_lilbl_shipment_id_str_old" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_shipment_id" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/></LinearLayout><LinearLayout android:background="@android:color/transparent" android:id="@+id/grp_txn_history_mobile" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_history_payee_name" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp" android:textStyle="bold"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_history_mobile" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/></LinearLayout><LinearLayout android:background="@android:color/transparent" android:id="@+id/grp_txn_history_payment_type" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_txn_history_payment_type_label" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:text="@string/str_lbl_txn_history_payment_type_label" android:textColor="@android:color/black" android:textSize="14dp"/><ImageView android:background="@drawable/cash" android:id="@+id/lilbl_txn_history_payment_type" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content"/><ImageView android:background="@drawable/visa" android:id="@+id/lilbl_txn_history_card_type" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_history_card_prefix" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:text="@string/str_lilbl_txn_history_card_prefix" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_history_card_last_four" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lbl_txn_detail_card_txn_type_desc" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/></LinearLayout><LinearLayout android:background="@android:color/transparent" android:id="@+id/grp_txn_history_emi" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_history_emi_label" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:text="@string/str_lilbl_txn_history_emi_label" android:textColor="@android:color/black" android:textSize="14dp"/><com.ezetap.utils.MyTextView android:id="@+id/lilbl_txn_history_emi" android:layout_gravity="left" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_width="wrap_content" android:textColor="@android:color/black" android:textSize="14dp"/></LinearLayout></LinearLayout></LinearLayout>