<?xml version="1.0" encoding="UTF-8" standalone="no"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/background_blue" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><ImageView android:background="@drawable/ezetap_home_logo" android:id="@+id/img_ezetap_home_logo" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_width="wrap_content"/><ScrollView android:id="@+id/scroll_about_screen" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical" android:paddingLeft="20dp" android:paddingRight="20dp"><LinearLayout android:background="@android:color/white" android:id="@+id/grp_ezetap_about_screen" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><LinearLayout android:background="@android:color/white" android:id="@+id/grp_ezetap_about_detail1" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_app_name_label" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:text="@string/str_lbl_ezetap_about_app_name_label" android:textSize="20sp" android:textStyle="bold"/><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_app_name" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textSize="20sp" android:textStyle="bold"/></LinearLayout><LinearLayout android:background="@android:color/white" android:id="@+id/grp_ezetap_about_detail2" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_app_version_label" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:text="@string/str_lbl_ezetap_about_app_version_label" android:textSize="20sp" android:textStyle="bold"/><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_app_version" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textSize="20sp" android:textStyle="bold"/></LinearLayout><LinearLayout android:background="@android:color/white" android:id="@+id/grp_ezetap_about_genmode" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_genmode_label" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:text="@string/str_lbl_ezetap_about_genmode_label" android:textSize="20sp" android:textStyle="bold"/><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_genmode_value" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textSize="20sp" android:textStyle="bold"/></LinearLayout><LinearLayout android:background="@android:color/white" android:id="@+id/grp_ezetap_about_contact_us" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical"><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_contact_us_label_1" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:text="@string/str_lbl_ezetap_about_contact_us_label_1" android:textSize="20sp" android:textStyle="bold"/><LinearLayout android:background="@android:color/white" android:id="@+id/grp_ezetap_about_contact_number" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_contact_us_label_2" android:layout_gravity="center_vertical" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textSize="20sp" android:textStyle="bold"/><com.ezetap.utils.MyButton android:background="@drawable/call" android:id="@+id/btn_ezetap_about_us_call" android:layout_alignParentRight="true" android:layout_height="36dp" android:layout_marginTop="0dp" android:layout_width="36dp" android:onClick="btn_ezetap_about_us_callClicked" android:textColor="@android:color/darker_gray" android:textSize="25sp" android:textStyle="bold"/></LinearLayout><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_contact_us_label_3" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textSize="20sp" android:textStyle="bold"/><com.ezetap.utils.MyTextView android:autoLink="web" android:id="@+id/lbl_ezetap_about_contact_us_label_4" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:textSize="20sp" android:textStyle="bold"/></LinearLayout><LinearLayout android:background="@android:color/white" android:id="@+id/grp_ezetap_about_imei" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="horizontal"><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_imei" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:text="@string/str_lbl_ezetap_about_imei" android:textSize="20sp" android:textStyle="bold"/><com.ezetap.utils.MyTextView android:id="@+id/lbl_ezetap_about_imei_no" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="10sp" android:layout_width="wrap_content" android:paddingLeft="10dp" android:textSize="20sp" android:textStyle="bold"/></LinearLayout></LinearLayout></ScrollView></LinearLayout>